[gd_scene load_steps=2 format=3 uid="uid://b0oikjky6vpu6"]

[ext_resource type="Script" uid="uid://bccqw1vdheu4o" path="res://debug_folders/filipstrahov/quest/quest_labels.gd" id="1_grn6d"]

[node name="QuestUI" type="CanvasLayer"]
layer = 2
script = ExtResource("1_grn6d")

[node name="QuestLabels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="QuestLabels"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 256.0
offset_right = 576.0
offset_bottom = -155.0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="QuestLabels/ColorRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_right = 138.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="CurrentQuests" type="Button" parent="QuestLabels/ColorRect2/HBoxContainer"]
layout_mode = 2
text = "Current quests"

[node name="Button2" type="Button" parent="QuestLabels/ColorRect2/HBoxContainer"]
layout_mode = 2
text = "Completed quests"

[node name="VBoxCurrentQuests" type="VBoxContainer" parent="QuestLabels"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 256.0
offset_top = 64.0
offset_right = 576.0
offset_bottom = -155.0
grow_vertical = 2

[node name="VBoxCompletedQuests" type="VBoxContainer" parent="QuestLabels"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 256.0
offset_top = 64.0
offset_right = 576.0
offset_bottom = -155.0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="QuestLabels"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_top = 64.0
offset_right = -320.0
offset_bottom = -155.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.269531, 0.657593, 1, 1)
metadata/_edit_group_ = true

[node name="QuestDescription" type="Label" parent="QuestLabels/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 71.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3

[node name="Button" type="Button" parent="QuestLabels/ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -47.0
offset_bottom = 31.0
grow_horizontal = 0
text = "QUIT"

[connection signal="pressed" from="QuestLabels/ColorRect2/HBoxContainer/CurrentQuests" to="." method="_on_current_quests_pressed"]
[connection signal="pressed" from="QuestLabels/ColorRect2/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="QuestLabels/ColorRect/Button" to="." method="_on_button_pressed"]
